--- a/day5/index.html
+++ b/day5/index.html
@@ -5,42 +5,43 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h2> Form </h2>
+        <h1> Form </h1>
         <hr> <br>
         <div class="success" id="success"></div>
-        <form id="form">       
+        <form id="form">
+            <div>
             <div class="form-fields">
-                <div class="form-field-el">
-                    <label class="form-label" for="fname">First name<sup>*</sup></label>
-                    <div id="invalidfname"></div>
-                    <input class="form-input" type="text" id="fname" name="fname">
+                <div class="form-fields-el">
+                    <label class="form-label" for="fname">First Name<sup>*</sup></label>    
+                    <div class="error-message" id="invalidfname"></div>           
+                    <input class="form-input" type="text" id="fname" name="fname">  
                 </div>
-                <div class="form-field-el">
-                    <label class="form-label" for="lname">Last name<sup>*</sup></label>
-                    <div id="invalidlname"></div>
-                    <input class="form-input" type="text" id="lname" name="lname">
+                <div class="form-fields-el">
+                    <label class="form-label" for="lname">Last Name<sup>*</sup></label>     
+                    <div class="error-message" id="invalidlname"></div>
+                    <input class="form-input" type="text" id="lname" name="lname">  
                 </div>
             </div>
             <div class="form-fields">
-                <div class="form-field-el">
+                <div>
                     <label class="form-label" for="eaddress">Email Address<sup>*</sup></label>
-                    <div id="invalideaddress"></div>
+                    <div class="error-message" id="invalideaddress"></div>
                     <input class="form-input" type="text" id="eaddress" name="eaddress">
                 </div>      
-                <div class="form-field-el">
+                <div>
                     <label class="form-label" for="pnumber">Phone Number<sup>*</sup></label>
-                    <div id="invalidpnumber"></div>
+                    <div class="error-message" id="invalidpnumber"></div>
                     <input class="form-input" type="text" id="pnumber" name="pnumber">
                 </div>
             </div>         
             <div class="form-checkbox-field">  
                 Do you agree to be contacted via text/SMS?<sup>*</sup>                      
-                <div id="invalidcheckbox"></div>
+                <div class="error-message" id="invalidcheckbox"></div>
                 <div class="checkbox-options">
-                    <label  for="yes"> Yes</label><br>
-                    <input type="checkbox" id="checkyes" name="checkbox" value="Yes">   
+                    <label for="yes"> Yes</label><br>
+                    <input type="radio" id="checkyes" name="checkbox" value="Yes">   
                     <label for="no"> No</label><br>     
-                    <input type="checkbox" id="checkno" name="checkbox" value="No">   
+                    <input type="radio" id="checkno" name="checkbox" value="No">   
                 </div>
             </div>
             <div class="form-dropdown-field">             
@@ -55,11 +56,12 @@
             <div class="form-textbox-field">
                 <div id="detailstbox" style="display:none;">
                     Please explain the problem in detail: <p></p>
-                    <div id="invalidprobdetails"></div>
-                    <input type="text" name="probdetails" id="probdetails"/>
+                    <div class="error-message" id="invalidprobdetails"></div>
+                    <textarea name="probdetails" id="probdetails"></textarea>
                 </div>                               
             </div>
             <input class="submit" type="submit" value="Sign Up">
+            </div>
         </form>        
     </body>
     <script src="script.js"></script>
