--- a/final_exercise/index.html
+++ b/final_exercise/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar">
+        <nav class="navbar" id="navbar">
             <ul>
                 <li>
                     <img class="logo_img"
@@ -19,12 +19,88 @@
             </ul>
         </nav>
         <div class="hero-image">
-            <div class="hero-text-background"> </div>
-                <div class="hero-text">
-                    <h1>Lorem ipsum dolor sit amet</h1>
-                    <p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet. Cats Cats Cats Cats. Cats Cats Cats Cats. Cats Cats Cats Cats. Cats Cats Cats Cats.
-                    </p>
-                  </div>
+            <div class="hero-text">
+                <h1>Lorem ipsum dolor sit amet</h1>
+                <p>Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Cats Cats Cats Cats. Cats Cats Cats Cats. Cats Cats Cats Cats.     
+                </p>
+                <p>
+                    Cats Cats Cats Cats. Cats Cats Cats Cats. Cats Cats Cats Cats. Cats Cats Cats Cats. Cats Cats Cats Cats. Cats Cats Cats Cats. 
+                </p>
+            </div>
+        </div>
+        <div class="flag-right">
+            <div>
+                <img src="http://placekitten.com/500/550" class="iconDetails">  
+            </div>            
+            <div class="flag-text" >
+                <h2>Lorem ipsum dolor sit amet</h4>
+                <div >
+                    <ul>
+                        <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
+                        <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
+                        <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
+                        <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
+                    </ul>
+                </div>
+                <button>Learn More</button>
+            </div>
+        </div>
+        <div class="flag-left">
+            <div class="flag-text" >
+                <div>
+                    <div class="title">
+                        <h1>Lorem ipsum dolor sit amet</h1>
+                    </div>
+                    <p>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</p>
+                    <p>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</p>
+                    <p>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</p>
+                    <p>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</p>
+                </div>
+                <button>Learn More</button>
+            </div>
+            <div>
+                <img src="http://placekitten.com/500/500" class="iconDetails">  
+            </div>           
+        </div>
+        <div class="pre-card">
+            <div class="title">
+                <h1>Lorem ipsum dolor sit amet</h1>
+            </div>   
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa.
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <img src="http://placekitten.com/500/250" alt="kitten">
+                <div class="card-el">
+                  <h4><b>Lorem ipsum dolor sit amet.</b></h4>
+                  Normal cat<br>
+                  <hr>
+                  <p>By Anon</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="http://placekitten.com/501/250" alt="kitten">
+                <div class="card-el">
+                  <h4><b>Lorem ipsum dolor sit amet.</b></h4>
+                  Normal cat II <br>
+                  <hr>
+                  <p>By Anon</p>
+                </div>
+              </div>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <img src="http://placekitten.com/499/250" alt="kitten">
+                <div class="card-el">
+                  <h4><b>Lorem ipsum dolor sit amet.</b></h4>
+                  Snow cat <br>
+                  <hr>
+                  <p>By Anon</p>
+                </div>
+              </div>
+        </div>
+        <div class="footer">
+            <p>@2021 RUNTIME REVOLUTION - ALL RIGHTS RESERVED</p>
         </div>
     </body>
 </html>
