Layout for responsive menu

--- a/final_exercise/index.html
+++ b/final_exercise/index.html
@@ -14,8 +14,15 @@
                         width= 150px>
                 </li>                
                 <li><a href="#home">About Us</a></li>
-                <li><a href="#news">Privacy Policy</a></li>
-                <li><a href="#contact">Sign Up</a></li>
+                <li><a href="#news">Privacy Policy</a></li>                
+                <li>
+                    <a href="javascript:void(0);" class="menu" onclick="myFunction()">
+                        Menu
+                    </a>
+                </li>     
+                <li>
+                    <button> Sign Up </button>     
+                </li>            
             </ul>
         </nav>
         <div class="hero-image">
