--- a/final_exercise/index.html
+++ b/final_exercise/index.html
@@ -5,25 +5,21 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar" id="navbar">
-            <ul>
-                <li>
-                    <img class="logo_img"
+        <nav class="navbar" id="navbar">      
+            <img class="logo_img"
                         src="https://uploads-ssl.webflow.com/57026eeaae2865457397fed4/5aba1b20cd72e6c06e58f4cf_LogoRR_cor_site.png"
                         alt="Runtime Logo"
                         width= 150px>
-                </li>                
+            <ul>                     
                 <li><a href="#home">About Us</a></li>
-                <li><a href="#news">Privacy Policy</a></li>                
-                <li>
-                    <a href="javascript:void(0);" class="menu" onclick="myFunction()">
-                        Menu
-                    </a>
-                </li>     
+                <li><a href="#news">Privacy Policy</a></li>    
                 <li>
                     <button> Sign Up </button>     
-                </li>            
+                </li>           
             </ul>
+            <a href="javascript:void(0);" class="menu" onclick="getMenu()">
+                Menu
+            </a>
         </nav>
         <div class="hero-image">
             <div class="hero-text">
@@ -110,4 +106,5 @@
             <p>@2021 RUNTIME REVOLUTION - ALL RIGHTS RESERVED</p>
         </div>
     </body>
+    <script src="script.js"></script>
 </html>
