Finish responsive flags

--- a/final_exercise/index.html
+++ b/final_exercise/index.html
@@ -35,21 +35,21 @@
             <div>
                 <img src="http://placekitten.com/500/550" class="iconDetails">  
             </div>            
-            <div class="flag-text" >
+            <div >
                 <h2>Lorem ipsum dolor sit amet</h4>
-                <div >
+                <div>
                     <ul>
                         <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
                         <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
                         <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
                         <li>Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats Cats</li>
                     </ul>
-                </div>
-                <button>Learn More</button>
+                    <button>Learn More</button> 
+                </div>                               
             </div>
         </div>
         <div class="flag-left">
-            <div class="flag-text" >
+            <div class="first-div">
                 <div>
                     <div class="title">
                         <h1>Lorem ipsum dolor sit amet</h1>
@@ -61,7 +61,7 @@
                 </div>
                 <button>Learn More</button>
             </div>
-            <div>
+            <div class="second-div">
                 <img src="http://placekitten.com/500/500" class="iconDetails">  
             </div>           
         </div>
